--- a/prototyp/prototyp.css
+++ b/prototyp/prototyp.css
@@ -1,12 +1,25 @@
+/*
 body{
     background-color: cornflowerblue;
 }
+
 
 h1{
     color: black;
     font-size: 48px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
+}
+*/
+
+.head-item {
+    border: 1px solid black;
+    background-color: lightgray;
+    float: left;
+    width: 150px;
+    height: 20px;
+    text-align: center;
+    position: static;
 }
 
 .column{
@@ -25,6 +38,16 @@ h1{
     text-align: center;
 }
 
+.new-column {
+    border: 3px solid darkblue;
+    border-radius: 5px;
+    background-color: lightblue;
+    height: 75px;
+    float: left;
+    width: 250px;
+    margin: 10px;
+}
+
 .task{
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -37,11 +60,15 @@ h1{
 .task:hover {
     background-color: cyan;
 }
-.newTask{
+.new-task{
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: lightcyan;
     border: 2px solid darkcyan;
     border-radius: 4px;
     margin: 3px;
+}
+
+.log-out:hover {
+    background-color: rgba(255, 0, 0, 0.329);
 }
