Minor bugs fixed

--- a/html/css/design.css
+++ b/html/css/design.css
@@ -60,7 +60,7 @@ header nav ul li:hover {
 /* HOME ******************************/
 
 #home {
-  background: url(img/banana.jpg);
+  background: url(../../img/banana.jpg);
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
