--- a/html/css/kanban.css
+++ b/html/css/kanban.css
@@ -1,4 +1,3 @@
-
 /* General ****************/
 
 #kanban {
@@ -7,6 +6,7 @@
     background-size: cover;
     background-attachment: fixed;
 }
+
 /* Dropdown menu **********/
 
 .dropdown {
@@ -20,18 +20,18 @@
     border-radius: 5px;
     background-color: rgb(160, 114, 83);
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
 }
-  
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
 /* Kanban Columns *********/
 
-.column{
+.column {
     font-family: 'Roboto Slab', serif;
     background-color: rgb(59, 24, 0);
     float: left;
@@ -50,11 +50,11 @@
     margin: 0;
 }
 
-.new-column{  
+.new-column {
     background-color: rgb(160, 114, 83);
 }
 
-.new-column-input{
+.new-column-input {
     font-size: 25px;
     text-align: center;
     color: whitesmoke;
@@ -83,7 +83,7 @@
 }
 
 .task-card:hover {
-    transition-duration: 0,1s;
+    transition-duration: 0, 1s;
     border: #be6e2b solid;
 }
 
@@ -121,11 +121,11 @@
     border-radius: 5px;
     background-color: rgba(59, 24, 0, 0.815);
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
 }
-                    
+
 .task-card:hover .task-description {
     display: block;
 }
@@ -134,7 +134,7 @@
     display: block;
 }
 
-.desc-text{
+.desc-text {
     background-color: inherit;
     margin: 0%;
     resize: none;
@@ -170,8 +170,8 @@
     min-width: 15px;
     width: auto;
     background-color: green;
-    border-bottom-left-radius : 4px;
-    border-top-left-radius : 4px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
     float: left;
 }
 
@@ -212,7 +212,7 @@
 .new-card button {
     margin-top: 2%;
     background: url("../img/plus.svg");
-    background-color:  #be6e2b;
+    background-color: #be6e2b;
     height: 15px;
     width: 15px;
     border-radius: 15px;
@@ -231,7 +231,8 @@ label {
     border-radius: 10px;
     background-color: darkgray;
     position: fixed;
-    top: 20%; left: 20%;
+    top: 20%;
+    left: 20%;
     display: none;
 }
 
@@ -276,9 +277,11 @@ label {
 #low {
     background-color: green;
 }
+
 #medium {
     background-color: orange;
 }
+
 #high {
     background-color: red;
 }
