--- a/html/css/index.css
+++ b/html/css/index.css
@@ -16,13 +16,21 @@ a {
 li {
     list-style-type: none;
 }
+h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: whitesmoke;
+}
 
-h1, h2, h3, a {
+h2, h3, a {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     color: whitesmoke;
     text-transform: uppercase;
 }
+
+
+
 
 h2 {
     color: whitesmoke;
@@ -151,7 +159,7 @@ header nav ul li:hover {
     margin: 0 auto 0 auto;
 }
 
-/* WORK ******************************/
+/* Registration ******************************/
 
 #login {
     background-color: rgb(59, 24, 0);
