Fixed a bug where after dragging a card the header would be placed below the task card

--- a/html/css/kanban.css
+++ b/html/css/kanban.css
@@ -221,6 +221,10 @@
     order: -1;
 }
 
+.column h2 {
+    order: -2;
+}
+
 .new-card button img {
     margin-top: 2%;
     background: url("../img/plus.svg");
