Made the columns full screen

--- a/html/css/kanban.css
+++ b/html/css/kanban.css
@@ -35,7 +35,7 @@
     font-family: 'Roboto Slab', serif;
     background-color: rgb(59, 24, 0);
     float: left;
-    width: 250px;
+    width: 31%;
     height: 90%;
     margin: 1%;
     margin-top: 4%;
