--- a/html/css/kanban.css
+++ b/html/css/kanban.css
@@ -168,11 +168,17 @@
 .handle {
     min-height: inherit;
     min-width: 15px;
-    width: auto;
+    width: 5%;
     background-color: #999999;
     border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
     float: left;
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+}
+
+.handle:hover {
+    cursor: pointer;
 }
 
 .handle .low {
